[gd_scene load_steps=6 format=2]

[ext_resource path="res://styles/main_theme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/screen_results.gd" type="Script" id=2]
[ext_resource path="res://styles/header_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://sound/success.wav" type="AudioStream" id=4]
[ext_resource path="res://sound/failure.wav" type="AudioStream" id=5]

[node name="screen_results" type="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
expand = true
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
alignment = 1

[node name="HBoxHeader" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 180.0
margin_right = 1280.0
margin_bottom = 294.0
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/HBoxHeader"]
margin_left = 350.0
margin_right = 929.0
margin_bottom = 114.0
custom_fonts/font = ExtResource( 3 )
text = "RES_HEADER"
align = 1

[node name="HBoxStats" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 298.0
margin_right = 1280.0
margin_bottom = 546.0
alignment = 1

[node name="VBoxStats" type="VBoxContainer" parent="VBoxContainer/HBoxStats"]
margin_right = 1280.0
margin_bottom = 248.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="StatsGrid" type="GridContainer" parent="VBoxContainer/HBoxStats/VBoxStats"]
margin_left = 197.0
margin_right = 1082.0
margin_bottom = 248.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/hseparation = 80
columns = 2

[node name="Empty" type="Label" parent="VBoxContainer/HBoxStats/VBoxStats/StatsGrid"]
margin_right = 382.0
margin_bottom = 38.0
align = 2

[node name="PlayerName" type="Label" parent="VBoxContainer/HBoxStats/VBoxStats/StatsGrid"]
margin_left = 462.0
margin_right = 885.0
margin_bottom = 38.0
size_flags_horizontal = 3
align = 1

[node name="OpponentName" type="Label" parent="VBoxContainer/HBoxStats/VBoxStats/StatsGrid"]
visible = false
margin_left = 928.0
margin_right = 928.0
margin_bottom = 37.0
size_flags_horizontal = 3
align = 1

[node name="LabelsGrid" type="GridContainer" parent="VBoxContainer/HBoxStats/VBoxStats/StatsGrid"]
editor/display_folded = true
margin_top = 42.0
margin_right = 382.0
margin_bottom = 248.0

[node name="Stat" type="Label" parent="VBoxContainer/HBoxStats/VBoxStats/StatsGrid/LabelsGrid"]
margin_right = 382.0
margin_bottom = 38.0
align = 2

[node name="StatCorrectAnswers" type="Label" parent="VBoxContainer/HBoxStats/VBoxStats/StatsGrid/LabelsGrid"]
margin_top = 42.0
margin_right = 382.0
margin_bottom = 80.0
text = "RES_CORRECT_ANSWERS"
align = 2

[node name="StatRemainingLives" type="Label" parent="VBoxContainer/HBoxStats/VBoxStats/StatsGrid/LabelsGrid"]
margin_top = 84.0
margin_right = 382.0
margin_bottom = 122.0
text = "RES_REMAINING_LIVES"
align = 2

[node name="StatWin" type="Label" parent="VBoxContainer/HBoxStats/VBoxStats/StatsGrid/LabelsGrid"]
margin_top = 126.0
margin_right = 382.0
margin_bottom = 164.0
text = "RES_WIN"
align = 2

[node name="StatTotal" type="Label" parent="VBoxContainer/HBoxStats/VBoxStats/StatsGrid/LabelsGrid"]
margin_top = 168.0
margin_right = 382.0
margin_bottom = 206.0
text = "RES_TOTAL"
align = 2

[node name="PlayerGrid" type="GridContainer" parent="VBoxContainer/HBoxStats/VBoxStats/StatsGrid"]
editor/display_folded = true
margin_left = 462.0
margin_top = 42.0
margin_right = 885.0
margin_bottom = 248.0
custom_constants/hseparation = 20
columns = 2

[node name="PlayerQuantity" type="Label" parent="VBoxContainer/HBoxStats/VBoxStats/StatsGrid/PlayerGrid"]
margin_right = 228.0
margin_bottom = 38.0
size_flags_horizontal = 3
text = "RES_QUANTITY"
align = 1

[node name="PlayerScore" type="Label" parent="VBoxContainer/HBoxStats/VBoxStats/StatsGrid/PlayerGrid"]
margin_left = 248.0
margin_right = 423.0
margin_bottom = 38.0
size_flags_horizontal = 3
text = "RES_SCORE"
align = 1

[node name="CorrectAnswersQuantity" type="Label" parent="VBoxContainer/HBoxStats/VBoxStats/StatsGrid/PlayerGrid"]
margin_top = 42.0
margin_right = 228.0
margin_bottom = 80.0
size_flags_horizontal = 3
align = 1

[node name="CorrectAnswersValue" type="Label" parent="VBoxContainer/HBoxStats/VBoxStats/StatsGrid/PlayerGrid"]
margin_left = 248.0
margin_top = 42.0
margin_right = 423.0
margin_bottom = 80.0
size_flags_horizontal = 3
align = 1

[node name="RemainingLivesQuantity" type="Label" parent="VBoxContainer/HBoxStats/VBoxStats/StatsGrid/PlayerGrid"]
margin_top = 84.0
margin_right = 228.0
margin_bottom = 122.0
size_flags_horizontal = 3
align = 1

[node name="RemainingLivesValue" type="Label" parent="VBoxContainer/HBoxStats/VBoxStats/StatsGrid/PlayerGrid"]
margin_left = 248.0
margin_top = 84.0
margin_right = 423.0
margin_bottom = 122.0
size_flags_horizontal = 3
align = 1

[node name="WinQuantity" type="Label" parent="VBoxContainer/HBoxStats/VBoxStats/StatsGrid/PlayerGrid"]
margin_top = 126.0
margin_right = 228.0
margin_bottom = 164.0
size_flags_horizontal = 3
align = 1

[node name="WinValue" type="Label" parent="VBoxContainer/HBoxStats/VBoxStats/StatsGrid/PlayerGrid"]
margin_left = 248.0
margin_top = 126.0
margin_right = 423.0
margin_bottom = 164.0
size_flags_horizontal = 3
align = 1

[node name="TotalQuantity" type="Label" parent="VBoxContainer/HBoxStats/VBoxStats/StatsGrid/PlayerGrid"]
margin_top = 168.0
margin_right = 228.0
margin_bottom = 206.0
size_flags_horizontal = 3
align = 1

[node name="TotalValue" type="Label" parent="VBoxContainer/HBoxStats/VBoxStats/StatsGrid/PlayerGrid"]
margin_left = 248.0
margin_top = 168.0
margin_right = 423.0
margin_bottom = 206.0
size_flags_horizontal = 3
align = 1

[node name="OpponentGrid" type="GridContainer" parent="VBoxContainer/HBoxStats/VBoxStats/StatsGrid"]
editor/display_folded = true
visible = false
margin_left = 928.0
margin_top = 41.0
margin_right = 1697.0
margin_bottom = 242.0
custom_constants/hseparation = 20
columns = 2

[node name="OpponentQuantity" type="Label" parent="VBoxContainer/HBoxStats/VBoxStats/StatsGrid/OpponentGrid"]
margin_right = 404.0
margin_bottom = 37.0
size_flags_horizontal = 3
text = "RES_OPPONENT_QUANTITY"
align = 1

[node name="OpponentScore" type="Label" parent="VBoxContainer/HBoxStats/VBoxStats/StatsGrid/OpponentGrid"]
margin_left = 424.0
margin_right = 769.0
margin_bottom = 37.0
size_flags_horizontal = 3
text = "RES_OPPONENT_SCORE"
align = 1

[node name="OpponentCorrectAnswersQuantity" type="Label" parent="VBoxContainer/HBoxStats/VBoxStats/StatsGrid/OpponentGrid"]
margin_top = 41.0
margin_right = 404.0
margin_bottom = 78.0
size_flags_horizontal = 3
align = 1

[node name="OpponentCorrectAnswersValue" type="Label" parent="VBoxContainer/HBoxStats/VBoxStats/StatsGrid/OpponentGrid"]
margin_left = 424.0
margin_top = 41.0
margin_right = 769.0
margin_bottom = 78.0
size_flags_horizontal = 3
align = 1

[node name="OpponentRemainingLivesQuantity" type="Label" parent="VBoxContainer/HBoxStats/VBoxStats/StatsGrid/OpponentGrid"]
margin_top = 82.0
margin_right = 404.0
margin_bottom = 119.0
size_flags_horizontal = 3
align = 1

[node name="OpponentRemainingLivesValue" type="Label" parent="VBoxContainer/HBoxStats/VBoxStats/StatsGrid/OpponentGrid"]
margin_left = 424.0
margin_top = 82.0
margin_right = 769.0
margin_bottom = 119.0
size_flags_horizontal = 3
align = 1

[node name="OpponentWinQuantity" type="Label" parent="VBoxContainer/HBoxStats/VBoxStats/StatsGrid/OpponentGrid"]
margin_top = 123.0
margin_right = 404.0
margin_bottom = 160.0
size_flags_horizontal = 3
align = 1

[node name="OpponentWinValue" type="Label" parent="VBoxContainer/HBoxStats/VBoxStats/StatsGrid/OpponentGrid"]
margin_left = 424.0
margin_top = 123.0
margin_right = 769.0
margin_bottom = 160.0
size_flags_horizontal = 3
align = 1

[node name="OpponentTotalQuantity" type="Label" parent="VBoxContainer/HBoxStats/VBoxStats/StatsGrid/OpponentGrid"]
margin_top = 164.0
margin_right = 404.0
margin_bottom = 201.0
size_flags_horizontal = 3
align = 1

[node name="OpponentTotalValue" type="Label" parent="VBoxContainer/HBoxStats/VBoxStats/StatsGrid/OpponentGrid"]
margin_left = 424.0
margin_top = 164.0
margin_right = 769.0
margin_bottom = 201.0
size_flags_horizontal = 3
align = 1

[node name="HBoxControls" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 550.0
margin_right = 1280.0
margin_bottom = 620.0
rect_min_size = Vector2( 100, 70 )
alignment = 1

[node name="Next" type="Button" parent="VBoxContainer/HBoxControls"]
margin_left = 556.0
margin_top = 10.0
margin_right = 724.0
margin_bottom = 60.0
rect_min_size = Vector2( 100, 50 )
size_flags_vertical = 4
text = "RES_NEXT"

[node name="PlayerWin" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "Effects"

[node name="PlayerLose" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "Effects"
[connection signal="pressed" from="VBoxContainer/HBoxControls/Next" to="." method="_on_Next_pressed"]
